--- a/_styles/scss/objects/_main.scss
+++ b/_styles/scss/objects/_main.scss
@@ -2,11 +2,6 @@
 $main-namespace: "o-main" !default;
 
 .#{$main-namespace} {
-  padding-top: $spacing-jumbo;
-
-  @include breakpoint(32rem) {
-    // padding-top: $spacing-jumbo;
-  }
 
   @include breakpoint(45rem) {
     padding-top: $spacing-xxl;
